--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIENVENIDOS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <script src="https://kit.fontawesome.com/491df92c49.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy">
-  </head>
-<body>
+
+</head>
+
 <header>
   <nav class="navbar navbar-expand-lg" style="background-color: #faebd7;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="assets/img/logo-laurel.png" alt="..." width="..." height="...">
+        <img src="assets/img/stefanylogo.png" alt="..." width="100px" height="100px">
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -43,30 +47,20 @@
       </div>
   </nav>
 </header>
-
+<body>
 <!--aca empieza el banner, y el cuerpo de la pagina-->
 <section class="intro">
-<div id="sliderB5" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/img/6.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/img/2.jpeg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/img/51.jpg" class="d-block w-100" alt="...">
+ <div class="video-container">
+  <video class="video-player__viewer" data-video-player--video-player-target="video" data-action="click->video-player--video-player#togglePlay timeupdate->video-player--video-player#progressUpdate loadedmetadata->video-player--video-player#setVideoDuration" poster="https://mixkit.imgix.net/videos/preview/mixkit-portrait-of-two-funny-girls-among-many-flowers-42280-0.jpg?q=80&amp;auto=format%2Ccompress" src="https://assets.mixkit.co/videos/preview/mixkit-portrait-of-two-funny-girls-among-many-flowers-42280-large.mp4" controlslist="nodownload" disablepictureinpicture="" autoplay="" loop="" muted="" width="100%">
+  </video>
+   <div class="gradient-overlay"></div>
+   <div class="cards">
+    <div class="card-body">
+      Bienvenida, llegaste aquí a ser feliz 
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#sliderB5" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#sliderB5" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+ </div>
+
 </section>
 
 
@@ -187,13 +181,9 @@
   </div>
 </div>
 </div>  
+
+
 </section>
-
-<footer>
-  <p>Stefany Donnet Developer Jr. </p>
-</footer>
-
-
 
 
 
