--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <script src="https://kit.fontawesome.com/491df92c49.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
 </head>
 
+<!--Navbar y encabezado-->
 <header>
   <nav class="navbar navbar-expand-lg" style="background-color: #faebd7;">
     <div class="container-fluid">
@@ -30,10 +30,10 @@
                 TEMPORADA
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">VERANO</a></li>
-                <li><a class="dropdown-item" href="#">OTOÑO</a></li>
-                <li><a class="dropdown-item" href="#">INVIERNO</a></li>
-                <li><a class="dropdown-item" href="#">PRIMAVERA</a></li>
+                <li><a class="dropdown-item" href="#verano">VERANO</a></li>
+                <li><a class="dropdown-item" href="#otoño">OTOÑO</a></li>
+                <li><a class="dropdown-item" href="#invierno">INVIERNO</a></li>
+                <li><a class="dropdown-item" href="#primavera">PRIMAVERA</a></li>
               </ul>
             </li>
           </ul>
@@ -48,8 +48,11 @@
   </nav>
 </header>
 <body>
+<!--termina el navbar y encabezado-->
+
+
 <!--aca empieza el banner, y el cuerpo de la pagina-->
-<section class="intro">
+<section class="intro" id="intro">
  <div class="video-container">
   <video class="video-player__viewer" data-video-player--video-player-target="video" data-action="click->video-player--video-player#togglePlay timeupdate->video-player--video-player#progressUpdate loadedmetadata->video-player--video-player#setVideoDuration" poster="https://mixkit.imgix.net/videos/preview/mixkit-portrait-of-two-funny-girls-among-many-flowers-42280-0.jpg?q=80&amp;auto=format%2Ccompress" src="https://assets.mixkit.co/videos/preview/mixkit-portrait-of-two-funny-girls-among-many-flowers-42280-large.mp4" controlslist="nodownload" disablepictureinpicture="" autoplay="" loop="" muted="" width="100%">
   </video>
@@ -62,18 +65,262 @@
  </div>
 
 </section>
-
+<!--termina banner y cuerpo-->
 
 <!--catalogo-->
 <h1 class="catalogo">CATALOGO</h1>
+<section class="catalogo" id="catalogo">
+  <div class="container-fluid">
+    <img src="./assets/img/VERANO.jpg" class="img-fluid" width="25%" alt="25%">
+  </div>
+<section class="verano">
+<!--verano-->
+<div id="verano" class="about">
+  <div class="producto1">
+    <div class="container text-center">
+      <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="./assets/img/productos/verano/camisa mila.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Camisa Mila</h5>
+        <p class="card-text">$4.500</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<section class="catalogo">
-  <div id="catalogo" class="about">
+<div class="container text-center">
+  <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="assets/img/productos/verano/short-y-blazer-vertu-jeans-verano-2023.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Conjunto Vertu</h5>
+        <p class="card-text">$20.000</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container text-center">
+  <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="./assets/img/productos/verano/vertu conjunto.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Conjunto Sonora</h5>
+        <p class="card-text">$12.000</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+<div class="producto2">
+<div class="container text-center">
+  <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="./assets/img/productos/verano/vestido candi.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Vestido Candi</h5>
+        <p class="card-text">$15.000</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container text-center">
+  <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="./assets/img/productos/verano/vestido lili.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Vestido Lili</h5>
+        <p class="card-text">$15.000</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container text-center">
+  <div class="row row-cols-2">
+  <div class="card" style="width: 20rem;">
+    <img class="imgprod" src="./assets/img/productos/verano/vestido pipe.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Vestido Pipa</h5>
+      <p class="card-text">$15.000</p>
+    </div>
+    <div class="botones">
+      <div class="btn-group">
+        <a href=" " class="btn">Detalles</a>
+      <a href="" class="btn">Agregar</a>
+    </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>  
+</section>
+<!--termina verano-->
+
+<!--otoño-->
+<section class="otoño">
+  <h2 class="estacion">Otoño</h2>
+  <div id="otoño" class="about">
     <div class="producto1">
       <div class="container text-center">
         <div class="row row-cols-2">
       <div class="card" style="width: 20rem;">
-        <img class="imgprod" src="assets/img/productos/beige.jpg" class="card-img-top" alt="...">
+        <img class="imgprod" src="./assets/img/productos/otoño/baby chaleco.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Chaleco Baby</h5>
+          <p class="card-text">$9.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="assets/img/productos/otoño/chaleco tejido.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Chaleco Kim</h5>
+          <p class="card-text">$12.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/otoño/chaleco vaquero.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Chaleco Vaquero</h5>
+          <p class="card-text">$10.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  
+  <div class="producto2">
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/otoño/chaqueta emilia.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Chaqueta Emilia</h5>
+          <p class="card-text">$6.600</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/otoño/conjunto China.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Conjunto Ima</h5>
+          <p class="card-text">$30.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="./assets/img/productos/otoño/sweater jose.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Sweater Jose</h5>
+        <p class="card-text">$25.000</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>  
+  </section>
+
+<!--termina otoño-->
+
+
+<section class="invierno">
+<!--invierno-->
+<h2 class="estacion">Invierno</h2>
+  <div id="invierno" class="about">
+    <div class="producto1">
+      <div class="container text-center">
+        <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="assets/img/productos/invierno/catalina.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tapado Catalina</h5>
           <p class="card-text">$30.000</p>
@@ -91,7 +338,7 @@
   <div class="container text-center">
     <div class="row row-cols-2">
       <div class="card" style="width: 20rem;">
-        <img class="imgprod" src="assets/img/productos/buzo rosa.jpg" class="card-img-top" alt="...">
+        <img class="imgprod" src="assets/img/productos/invierno/buzo rosa.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Buzo Rose</h5>
           <p class="card-text">$12.000</p>
@@ -109,7 +356,7 @@
   <div class="container text-center">
     <div class="row row-cols-2">
       <div class="card" style="width: 20rem;">
-        <img class="imgprod" src="assets/img/productos/buzo celes.jpg" class="card-img-top" alt="...">
+        <img class="imgprod" src="assets/img/productos/invierno/buzo celes.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Buzo Cele</h5>
           <p class="card-text">$12.000</p>
@@ -130,7 +377,7 @@
   <div class="container text-center">
     <div class="row row-cols-2">
       <div class="card" style="width: 20rem;">
-        <img class="imgprod" src="assets/img/productos/rose.jpg" class="card-img-top" alt="...">
+        <img class="imgprod" src="assets/img/productos/invierno/rose.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tapado Bora</h5>
           <p class="card-text">$30.000</p>
@@ -148,7 +395,7 @@
   <div class="container text-center">
     <div class="row row-cols-2">
       <div class="card" style="width: 20rem;">
-        <img class="imgprod" src="assets/img/productos/unnamed (1).jpg" class="card-img-top" alt="...">
+        <img class="imgprod" src="assets/img/productos/invierno/unnamed (1).jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tapado Nina</h5>
           <p class="card-text">$30.000</p>
@@ -166,7 +413,7 @@
   <div class="container text-center">
     <div class="row row-cols-2">
     <div class="card" style="width: 20rem;">
-      <img class="imgprod" src="assets/img/productos/bei.jpg" class="card-img-top" alt="...">
+      <img class="imgprod" src="assets/img/productos/invierno/bei.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Tapado Lola</h5>
         <p class="card-text">$30.000</p>
@@ -181,9 +428,175 @@
   </div>
 </div>
 </div>  
-
-
 </section>
+</section>
+<!--termina invierno -->
+
+<!--primavera-->
+<section class="primavera">
+  <h2 class="estacion">Primavera</h2>
+  <div id="primavera" class="about">
+    <div class="producto1">
+      <div class="container text-center">
+        <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/primavera/bamba vestido.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Vestido Bamba</h5>
+          <p class="card-text">$19.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="assets/img/productos/primavera/mono.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Monito Luna/h5>
+          <p class="card-text">$22.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/primavera/petra.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Conjunto Petra</h5>
+          <p class="card-text">$35.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  
+  <div class="producto2">
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/primavera/Vestido Mara.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Vestido Mara</h5>
+          <p class="card-text">$10.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+      <div class="card" style="width: 20rem;">
+        <img class="imgprod" src="./assets/img/productos/primavera/conjunto Priscila.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Remera Berta</h5>
+          <p class="card-text">$15.000</p>
+        </div>
+        <div class="botones">
+          <div class="btn-group">
+            <a href=" " class="btn">Detalles</a>
+          <a href="" class="btn">Agregar</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container text-center">
+    <div class="row row-cols-2">
+    <div class="card" style="width: 20rem;">
+      <img class="imgprod" src="./assets/img/productos/primavera/falda Cor.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Falda Rocio</h5>
+        <p class="card-text">$14.000</p>
+      </div>
+      <div class="botones">
+        <div class="btn-group">
+          <a href=" " class="btn">Detalles</a>
+        <a href="" class="btn">Agregar</a>
+      </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>  
+  </section>
+
+<!--termina primavera-->
+<div>
+  <a href="#intro" class="btn btn-outline-dark"><i class="fa-brands fa-fort-awesome-alt"button type="button"> Home</i></a>
+</div>
+</section>
+<!--temrina catalogo-->
+
+<!--footer-->
+
+<footer class="footer">
+  <div class="redes">
+    <a href="https://instagram.com" target="_blank"class="btn btn-outline-warning"><i class="fa-brands fa-instagram fa-2x1"></i> Instagram </a>
+    <a href="https://gmail.com" target="_blank" class="btn btn-outline-warning"><i class="fa-regular fa-envelope fa-2x1"></i> Contactanos</a>
+    <!-- Button trigger modal -->
+    <a target="_blank" class="btn btn-outline-warning"><i class="fa-solid fa-truck-pickup fa-xs"button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"> Envios</i></a>
+  </div>
+
+<!--Usuario y contraseña ventana modal-->  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Login</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control-plaintext" id="staticEmail" value="email@example.com">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Contraseña</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword">
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>  
+</footer>
+
+
+<!--termina footer-->
 
 
 
