--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PRODUCTOS</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <script src="https://kit.fontawesome.com/491df92c49.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PRODUCTOS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Rajdhani:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/normalize.css">
+    <script src="https://kit.fontawesome.com/491df92c49.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+
 <body>
-<!--VERANO-->
+    </a>
+    <div class="container">
+        <h2>Productos</h2>
+        <ul id="productos">
+            <li>
+                <span>Producto 1</span>
+                <button class="agregar-carrito" data-id="1" data-nombre="Producto 1" data-precio="10">Agregar al
+                    carrito</button>
+            </li>
+            <li>
+                <span>Producto 2</span>
+                <button class="agregar-carrito" data-id="2" data-nombre="Producto 2" data-precio="15">Agregar al
+                    carrito</button>
+            </li>
+            <li>
+                <span>Producto 3</span>
+                <button class="agregar-carrito" data-id="3" data-nombre="Producto 3" data-precio="20">Agregar al
+                    carrito</button>
+            </li>
+        </ul>
+    </div>
 
 
 
@@ -49,16 +74,6 @@
 
 
 
-<!--TERMINA VERANO-->
-
-<!--OTOÑO-->
-<!--TEMRINA OTOÑO-->
-
-<!--INVIERNO-->
-<!--TERMINA INVIERNO-->
-
-<!--PRIMAVERA-->
-<!--TERMINA PRIMAVERA-->
 
 
 
@@ -73,9 +88,7 @@
 
 
 
-
-
-
-
+<script src="../scripts/scripts.js"></script>
 </body>
+
 </html>
