--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -17,26 +17,19 @@
 </head>
 
 <body>
-  <div id="carrito" class="modal fade" tabindex="-1" aria-labelledby="carritoLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="carritoLabel">Carrito de Compras</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body" id="carritoProductos">
-          <!-- Aquí se mostrarán los productos del carrito -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary" id="finalizarCompraBtn">Finalizar Compra</button>
-        </div>
+  <h1>Carrito de Compras</h1>
+  <div class="container">
+    <div class="carrito-compras">
+      <h2>Productos en el carrito:</h2>
+      <div id="carritoProductos">
+        <!-- Aquí se mostrarán los productos del carrito -->
       </div>
+      <div id="totalCompra">
+        <!-- Aquí se mostrará el total de la compra -->
+      </div>
+      <button id="finalizarCompraBtn">Finalizar Compra</button>
     </div>
   </div>
-
-
-
 
 
 
