ya funciona el carrito, ya es responsive, tocar el boton temporada para ir a estaciones

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">NUEVO</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -111,13 +108,13 @@
         <div class="card col-md-4 col-xs-12">
           <img src="./assets/img/productos/verano/camisa mila.jpg" class="img-fluid w-100" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Camisa Mila</h5>
-            <p class="card-text">$4.500</p>
+            <h5 class="text-center">Camisa Mila</h5>
+            <p class="text-center">$4.500</p>
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=1" data-id="1" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="1" data-nombre="Camisa Mila"
+              <a href="./pages/detalles.html?id=1" data-id="1" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="1" data-nombre="Camisa Mila"
                 data-precio="4500">Agregar</a>
             </div>
           </div>
@@ -131,8 +128,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=2" data-id="2" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="2" data-nombre="Conjunto Vertu"
+              <a href="./pages/detalles.html?id=2" data-id="2" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="2" data-nombre="Conjunto Vertu"
                 data-precio="20000">Agregar</a>
             </div>
           </div>
@@ -146,8 +143,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=3" data-id="3" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="3" data-nombre="Conjunto Sonora"
+              <a href="./pages/detalles.html?id=3" data-id="3" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="3" data-nombre="Conjunto Sonora"
                 data-precio="12000">Agregar</a>
             </div>
           </div>
@@ -162,8 +159,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=4" data-id="4" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="4" data-nombre="Vestido Candi"
+              <a href="./pages/detalles.html?id=4" data-id="4" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="4" data-nombre="Vestido Candi"
                 data-precio="15000">Agregar</a>
             </div>
           </div>
@@ -177,8 +174,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=5" data-id="5" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="5" data-nombre="Vestido Lili"
+              <a href="./pages/detalles.html?id=5" data-id="5" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="5" data-nombre="Vestido Lili"
                 data-precio="15000">Agregar</a>
             </div>
           </div>
@@ -192,9 +189,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=6" data-id="6" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="6" data-nombre="Vestido Pipa"
-                data-precio="15000">Agregar</a>
+              <a href="./pages/detalles.html?id=6" data-id="6" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="6" data-nombre="Vestido Pipa" data-precio="15000">Agregar</a>
             </div>
           </div>
         </div>
@@ -226,7 +222,7 @@
 
 
     <h1 class="otoño">OTOÑO</h1>
-    <section class="verano container-fluid">
+    <section class="otoño container-fluid">
       <div class="producto1 row d-flex justify-content-evenly">
         <div class="card col-md-4 col-xs-12">
           <img src="./assets/img/productos/otoño/baby chaleco.jpg" class="img-fluid w-100" alt="...">
@@ -236,8 +232,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=7" data-id="7" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="7" data-nombre="Chaleco Baby"
+              <a href="./pages/detalles.html?id=7" data-id="7"  class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="7" data-nombre="Chaleco Baby"
                 data-precio="9000">Agregar</a>
             </div>
           </div>
@@ -250,8 +246,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=8" data-id="8" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="8" data-nombre="Chaleco Kim"
+              <a href="./pages/detalles.html?id=8" data-id="8"  class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="8" data-nombre="Chaleco Kim"
                 data-precio="12000">Agregar</a>
             </div>
           </div>
@@ -265,8 +261,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=9" data-id="9" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="9" data-nombre="Chaleco Vaquero"
+              <a href="./pages/detalles.html?id=9" data-id="9" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="9" data-nombre="Chaleco Vaquero"
                 data-precio="10000">Agregar</a>
             </div>
           </div>
@@ -282,8 +278,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=10" data-id="10" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="10" data-nombre="Chaleco Emilia"
+              <a href="./pages/detalles.html?id=10" data-id="10" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="10" data-nombre="Chaleco Emilia"
                 data-precio="6600">Agregar</a>
             </div>
           </div>
@@ -296,8 +292,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=11" data-id="11" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="11" data-nombre="Conjunto Ima"
+              <a href="./pages/detalles.html?id=11" data-id="11" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="11" data-nombre="Conjunto Ima"
                 data-precio="30000">Agregar</a>
             </div>
           </div>
@@ -311,8 +307,8 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=12" data-id="12" class="btn">Detalles</a>
-              <a href="#" class="btn input agregar-carrito" data-id="12" data-nombre="Sweater Jose"
+              <a href="./pages/detalles.html?id=12" data-id="12" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="12" data-nombre="Sweater Jose"
                 data-precio="25000">Agregar</a>
             </div>
           </div>
@@ -352,8 +348,8 @@
             </div>
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
-                <a href="./pages/detalles.html?id=13" data-id="13" class="btn">Detalles</a>
-                <a href="#" class="btn input agregar-carrito" data-id="13" data-nombre="Tapado Catalina"
+                <a href="./pages/detalles.html?id=13" data-id="13" class="btn btn-sm btn-secondary col-6">Detalles</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="13" data-nombre="Tapado Catalina"
                   data-precio="30000">Agregar</a>
               </div>
             </div>
@@ -367,8 +363,8 @@
             </div>
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
-                <a href="./pages/detalles.html?id=14" data-id="14" class="btn">Detalles</a>
-                <a href="#" class="btn input agregar-carrito" data-id="14" data-nombre="Buzo Rose"
+                <a href="./pages/detalles.html?id=14" data-id="14" class="btn btn-sm btn-secondary col-6">Detalles</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="14" data-nombre="Buzo Rose"
                   data-precio="12000">Agregar</a>
               </div>
             </div>
@@ -384,8 +380,8 @@
             </div>
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
-                <a href="./pages/detalles.html?id=15" data-id="15" class="btn">Detalles</a>
-                <a href="#" class="btn input agregar-carrito" data-id="15" data-nombre="Buzo Cele"
+                <a href="./pages/detalles.html?id=15" data-id="15" class="btn btn-sm btn-secondary col-6">Detalles</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="15" data-nombre="Buzo Cele"
                   data-precio="12000">Agregar</a>
               </div>
             </div>
@@ -401,8 +397,8 @@
             </div>
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
-                <a href="./pages/detalles.html?id=16" data-id="16" class="btn">Detalles</a>
-                <a href="#" class="btn input agregar-carrito" data-id="16" data-nombre="Tapado Bora"
+                <a href="./pages/detalles.html?id=16" data-id="16" class="btn btn-sm btn-secondary col-6">Detalles</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="16" data-nombre="Tapado Bora"
                   data-precio="30000">Agregar</a>
               </div>
             </div>
@@ -416,8 +412,8 @@
             </div>
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
-                <a href="./pages/detalles.html?id=17" data-id="17" class="btn">Detalles</a>
-                <a href="#" class="btn input agregar-carrito" data-id="17" data-nombre="Tapado Nina"
+                <a href="./pages/detalles.html?id=17" data-id="17" class="btn btn-sm btn-secondary col-6">Detalles</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="17" data-nombre="Tapado Nina"
                   data-precio="30000">Agregar</a>
               </div>
             </div>
@@ -432,8 +428,8 @@
             </div>
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
-                <a href="./pages/detalles.html?id=18" data-id="18" class="btn">Detalles</a>
-                <a href="#" class="btn input agregar-carrito" data-id="18" data-nombre="Tapado Lola"
+                <a href="./pages/detalles.html?id=18" data-id="18" class="btn btn-sm btn-secondary col-6">Detalles</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="18" data-nombre="Tapado Lola"
                   data-precio="30000">Agregar</a>
               </div>
             </div>
@@ -475,8 +471,8 @@
         </div>
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
-            <a href="./pages/detalles.html?id=19" data-id="19" class="btn">Detalles</a>
-            <a href="#" class="btn input agregar-carrito" data-id="19" data-nombre="Vestido Bamba"
+            <a href="./pages/detalles.html?id=19" data-id="19" class="btn btn-sm btn-secondary col-6">Detalles</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-nombre="Vestido Bamba"
               data-precio="19000">Agregar</a>
           </div>
         </div>
@@ -490,8 +486,8 @@
         </div>
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
-            <a href="./pages/detalles.html?id=20" data-id="20" class="btn">Detalles</a>
-            <a href="#" class="btn input agregar-carrito" data-id="20" data-nombre="Monito Luna"
+            <a href="./pages/detalles.html?id=20" data-id="20" class="btn btn-sm btn-secondary col-6">Detalles</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="20" data-nombre="Monito Luna"
               data-precio="22000">Agregar</a>
           </div>
         </div>
@@ -506,8 +502,8 @@
         </div>
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
-            <a href="./pages/detalles.html?id=21" data-id="21" class="btn">Detalles</a>
-            <a href="#" class="btn input agregar-carrito" data-id="21" data-nombre="Conjunto Petra"
+            <a href="./pages/detalles.html?id=21" data-id="21" class="btn btn-sm btn-secondary col-6">Detalles</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="21" data-nombre="Conjunto Petra"
               data-precio="35000">Agregar</a>
           </div>
         </div>
@@ -522,8 +518,8 @@
         </div>
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
-            <a href="./pages/detalles.html?id=22" data-id="22" class="btn">Detalles</a>
-            <a href="#" class="btn input agregar-carrito" data-id="22" data-nombre="Vestido Mara"
+            <a href="./pages/detalles.html?id=22" data-id="22" class="btn btn-sm btn-secondary col-6">Detalles</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="22" data-nombre="Vestido Mara"
               data-precio="10000">Agregar</a>
           </div>
         </div>
@@ -537,8 +533,8 @@
         </div>
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
-            <a href="./pages/detalles.html?id=23" data-id="23" class="btn">Detalles</a>
-            <a href="#" class="btn input agregar-carrito" data-id="23" data-nombre="Remera Berta"
+            <a href="./pages/detalles.html?id=23" data-id="23" class="btn btn-sm btn-secondary col-6">Detalles</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="23" data-nombre="Remera Berta"
               data-precio="15000">Agregar</a>
           </div>
         </div>
@@ -552,8 +548,8 @@
         </div>
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
-            <a href="./pages/detalles.html?id=24" data-id="24" class="btn">Detalles</a>
-            <a href="#" class="btn input agregar-carrito" data-id="24" data-nombre="Falda Rocio"
+            <a href="./pages/detalles.html?id=24" data-id="24" class="btn btn-sm btn-secondary col-6">Detalles</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="24" data-nombre="Falda Rocio"
               data-precio="14000">Agregar</a>
           </div>
         </div>
